bbswitch (0.8-6) UNRELEASED; urgency=medium

  * Switch Vcs-* URLs to salsa.debian.org.
  * Set Rules-Requires-Root: no.
  * Set Priority to optional.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Apr 2018 20:50:17 +0200

bbswitch (0.8-5) unstable; urgency=medium

  * Add fix-building-against-4.12.patch to fix build on Linux 4.12.
  * Use https in debian/copyright to be compliant with policy version
    4.0.0 and bump Standards-Version.

 -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 16 Jul 2017 23:37:38 +0100

bbswitch (0.8-4) unstable; urgency=medium

  [ Vincent Cheng ]
  * Make build reproducible by fixing order of files inside tar archive.
    (Closes: #803547)

  [ Andreas Beckmann ]
  * Update Standards version to 3.9.8, no changes required.
  * Update Vcs-* URLs.

 -- Vincent Cheng <vcheng@debian.org>  Sun, 29 May 2016 22:41:26 -0700

bbswitch (0.8-3) unstable; urgency=medium

  * Add myself to Uploaders.
  * Fix tarball permissions variance due to umask. Makes bbswitch build
    reproducibly. Thanks Reiner Herrmann for the patch. (Closes: #803547)

 -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 01 Nov 2015 17:22:03 +0100

bbswitch (0.8-2) unstable; urgency=medium

  [ Andreas Beckmann ]
  * bbswitch-source: Add Recommends: debhelper.
  * d/rules.modules: Set KDIR to allow building for a different kernel than the
    running one.  (Closes: #720682)
  * bbswitch-source: Use reproducible timestamps inside bbswitch.tar.bz2.
    (Closes: #778455)

  [ Vincent Cheng ]
  * Update Standards version to 3.9.6, no changes required.

 -- Vincent Cheng <vcheng@debian.org>  Sat, 25 Jul 2015 20:10:27 -0700

bbswitch (0.8-1) unstable; urgency=medium

  * New upstream release.
    - Fix FTBFS with linux 3.13.
  * Mark bbswitch-dkms as Multi-Arch: foreign. (Closes: #728739)
  * Update debian/copyright to reflect bbswitch license change to GPL-2+.
  * Update Standards version to 3.9.5, no changes required.
