@@ -3,6 +3,7 @@ bbswitch (0.8-6) UNRELEASED; urgency=medium
   * Switch Vcs-* URLs to salsa.debian.org.
   * Set Rules-Requires-Root: no.
   * Set Priority to optional.
+  * Use dpkg makefile snippets instead of manual changelog parsing.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Apr 2018 20:50:17 +0200
 
